--- a/tarifs.html
+++ b/tarifs.html
@@ -1141,7 +1141,7 @@
             </div>
 
             <div class="comparison-plan comparison-plan--pro">
-              <h5>Ninja Pro</h5>
+              <h5>Facture Pro</h5>
               <div class="comparison-plan-divider"></div>
               <ul class="comparison-list">
                 <li><span class="comparison-icon-check">✓</span></li>
@@ -1156,7 +1156,7 @@
                 <li><span class="comparison-icon-check">✓</span></li>
               </ul>
               <div class="comparison-plan-divider"></div>
-              <h5>Ninja Pro</h5>
+              <h5>Facture Pro</h5>
               <ul class="comparison-list">
                 <li><span class="comparison-icon-check">✓</span></li>
                 <li><span class="comparison-icon-check">✓</span></li>
