Update pricing card plan names

--- a/tarifs.html
+++ b/tarifs.html
@@ -959,7 +959,7 @@
 
         <div class="price-grid">
           <article class="price-card">
-            <h3>Free!</h3>
+            <h3>Le Pouce – Essentials</h3>
             <p>Yes, it's really free 🙂</p>
             <div class="price-amount">
               <span data-monthly="$0" data-annual="$0">$0</span>
@@ -993,7 +993,7 @@
           </article>
 
           <article class="price-card price-card--green">
-            <h3>Facture Pro*</h3>
+            <h3>Pieter Both – Pro</h3>
             <p>Pay annually for 10 months + 2 months free!</p>
             <div class="price-amount">
               <span data-monthly="$14" data-annual="$140">$140</span>
@@ -1027,7 +1027,7 @@
           </article>
 
           <article class="price-card price-card--blue">
-            <h3>Enterprise*</h3>
+            <h3>Le Morne – Enterprise</h3>
             <p>Pay annually for 10 months + 2 months free!</p>
             <div class="price-amount">
               <span data-monthly="$18" data-annual="$180">$180</span>
@@ -1057,7 +1057,7 @@
           </article>
 
           <article class="price-card price-card--yellow">
-            <h3>Premium Business+</h3>
+            <h3>Corps de Garde – Business</h3>
             <p>Pro + Enterprise + Premium Business Concierge</p>
             <div class="price-amount">
               <span data-monthly="From $280 annual*" data-annual="From $280*">From $280*</span>
