--- a/tarifs.html
+++ b/tarifs.html
@@ -740,7 +740,7 @@
       border-top-width: 2px;
     }
 
-    .comparison-feature{
+    .comparison-grid td.comparison-feature{
       text-align: left;
       font-size: 11px;
       font-weight: 400;
