Remove top and bottom borders from comparison columns

--- a/tarifs.html
+++ b/tarifs.html
@@ -727,8 +727,8 @@
 
     .comparison-grid thead .comparison-plan{
       font-weight: 800;
-      border-top: 1px solid var(--plan-border);
-      border-bottom: 1px solid #e5e7eb;
+      border-top: none;
+      border-bottom: none;
       padding-top: 14px;
       padding-bottom: 14px;
       border-top-left-radius: 14px;
@@ -749,13 +749,13 @@
 
     .comparison-section-row .comparison-plan{
       border-top: none;
-      border-bottom: 1px solid #e5e7eb;
+      border-bottom: none;
       padding-top: 18px;
       padding-bottom: 12px;
     }
 
     .comparison-grid tbody:last-of-type tr:last-child .comparison-plan{
-      border-bottom: 1px solid var(--plan-border);
+      border-bottom: none;
       padding-bottom: 18px;
       border-bottom-left-radius: 14px;
       border-bottom-right-radius: 14px;
