Fix signup button hover styles

--- a/tarifs.html
+++ b/tarifs.html
@@ -542,11 +542,21 @@
       border-color: #000;
     }
 
+    .price-grid .price-card:nth-child(1) .signup-btn:hover{
+      background: #000;
+      color: #fff;
+    }
+
     .price-grid .price-card:nth-child(3) .signup-btn{
       --signup-border-color: #0ea5e9;
       background: transparent;
       color: #0ea5e9;
       border-color: #0ea5e9;
+    }
+
+    .price-grid .price-card:nth-child(3) .signup-btn:hover{
+      background: #0ea5e9;
+      color: #fff;
     }
 
     .divider{
