--- a/tarifs.html
+++ b/tarifs.html
@@ -1121,9 +1121,9 @@
             <thead>
               <tr>
                 <th class="comparison-feature-head"></th>
-                <th class="comparison-plan comparison-plan--free">Free</th>
-                <th class="comparison-plan comparison-plan--pro">Facture Pro</th>
-                <th class="comparison-plan comparison-plan--enterprise">Enterprise</th>
+                <th class="comparison-plan comparison-plan--free">Le Pouce – Essentials</th>
+                <th class="comparison-plan comparison-plan--pro">Pieter Both – Pro</th>
+                <th class="comparison-plan comparison-plan--enterprise">Le Morne – Enterprise</th>
               </tr>
             </thead>
             <tbody class="comparison-section">
