Link logo to homepage

--- a/index.html
+++ b/index.html
@@ -1319,9 +1319,11 @@
 
 <header>
   <div class="container">
-    <div class="topbar">
+      <div class="topbar">
       <div class="brand">
-        <div class="logo-animation" data-animation="2.json" role="img" aria-label="Facture.mu"></div>
+        <a href="index.html" aria-label="Accueil Facture.mu">
+          <div class="logo-animation" data-animation="2.json" role="img" aria-label="Facture.mu"></div>
+        </a>
       </div>
 
       <button class="menu-toggle" type="button" aria-label="Ouvrir le menu" aria-expanded="false">
