Convert pricing to MUR

--- a/tarifs.html
+++ b/tarifs.html
@@ -1003,7 +1003,7 @@
             <h3>Le Pouce – Essentials</h3>
             <p>Yes, it's really free 🙂</p>
             <div class="price-amount">
-              <span data-monthly="$0" data-annual="$0">$0</span>
+              <span data-monthly="Rs 0" data-annual="Rs 0">Rs 0</span>
               <span class="price-term" data-monthly="Per month" data-annual="Per year">Per year</span>
             </div>
             <div class="price-action">
@@ -1037,7 +1037,7 @@
             <h3>Pieter Both – Pro</h3>
             <p>Pay annually for 10 months + 2 months free!</p>
             <div class="price-amount">
-              <span data-monthly="$14" data-annual="$140">$140</span>
+              <span data-monthly="Rs 630" data-annual="Rs 6,300">Rs 6,300</span>
               <span class="price-term" data-monthly="Per month" data-annual="per year with an annual plan!">per year with an annual plan!</span>
             </div>
             <div class="price-action">
@@ -1071,7 +1071,7 @@
             <h3>Le Morne – Enterprise</h3>
             <p>Pay annually for 10 months + 2 months free!</p>
             <div class="price-amount">
-              <span data-monthly="$18" data-annual="$180">$180</span>
+              <span data-monthly="Rs 810" data-annual="Rs 8,100">Rs 8,100</span>
               <span class="price-term" data-monthly="Per month" data-annual="Per year">Per year</span>
             </div>
             <div class="price-action">
@@ -1085,7 +1085,7 @@
               <li>Branded Client Portal: “Billing.YourCompany.com”</li>
               <li>Integrate &amp; Sync Bank Accounts via Yodlee or GoCardless Banking</li>
               <li>e-Invoicing, UBL format invoices, PEPPOL Network Access*</li>
-              <li>*PEPPOL credits 250 included! Additional PEPPOL credits are $50/500 or $100/1000 valid for 1-year from purchase.</li>
+              <li>*PEPPOL credits 250 included! Additional PEPPOL credits are Rs 2,250/500 or Rs 4,500/1000 valid for 1-year from purchase.</li>
             </ul>
           </article>
 
@@ -1093,7 +1093,7 @@
             <h3>Corps de Garde – Business</h3>
             <p>Pro + Enterprise + Premium Business Concierge</p>
             <div class="price-amount">
-              <span data-monthly="From $280 annual*" data-annual="From $280*">From $280*</span>
+              <span data-monthly="From Rs 12,600 annual*" data-annual="From Rs 12,600*">From Rs 12,600*</span>
             </div>
             <div class="price-contact" data-monthly="Let’s talk!" data-annual="Let’s talk!">Let’s talk!</div>
             <a class="price-link" href="mailto:info@facture.mu">info@facture.mu<span>↗</span></a>
