--- a/tarifs.html
+++ b/tarifs.html
@@ -1123,9 +1123,9 @@
             <thead>
               <tr>
                 <th class="comparison-feature-head"></th>
-                <th class="comparison-plan comparison-plan--free">Le Pouce – Essentials</th>
-                <th class="comparison-plan comparison-plan--pro">Pieter Both – Pro</th>
-                <th class="comparison-plan comparison-plan--enterprise">Le Morne – Enterprise</th>
+                <th class="comparison-plan comparison-plan--free" style=" border-top: 1px solid #e5e6ea; ">Le Pouce – Essentials</th>
+                <th class="comparison-plan comparison-plan--pro" style=" border-top: 1px solid #0fa4e8; ">Pieter Both – Pro</th>
+                <th class="comparison-plan comparison-plan--enterprise" style=" border-top: 1px solid #23c45f; ">Le Morne – Enterprise</th>
               </tr>
             </thead>
             <tbody class="comparison-section">
