--- a/tarifs.html
+++ b/tarifs.html
@@ -1003,7 +1003,7 @@
             <h3>Le Pouce – Essentials</h3>
             <p>Yes, it's really free 🙂</p>
             <div class="price-amount">
-              <span data-monthly="Rs 0" data-annual="Rs 0">Rs 0</span>
+              <span data-monthly="Rs 0" data-annual="Rs 0">Rs 0</span></br>
               <span class="price-term" data-monthly="Per month" data-annual="Per year">Per year</span>
             </div>
             <div class="price-action">
@@ -1037,7 +1037,7 @@
             <h3>Pieter Both – Pro</h3>
             <p>Pay annually for 10 months + 2 months free!</p>
             <div class="price-amount">
-              <span data-monthly="Rs 630" data-annual="Rs 6,300">Rs 6,300</span>
+              <span data-monthly="Rs 630" data-annual="Rs 6,300">Rs 6,300</span></br>
               <span class="price-term" data-monthly="Per month" data-annual="per year with an annual plan!">per year with an annual plan!</span>
             </div>
             <div class="price-action">
@@ -1071,7 +1071,7 @@
             <h3>Le Morne – Enterprise</h3>
             <p>Pay annually for 10 months + 2 months free!</p>
             <div class="price-amount">
-              <span data-monthly="Rs 810" data-annual="Rs 8,100">Rs 8,100</span>
+              <span data-monthly="Rs 810" data-annual="Rs 8,100">Rs 8,100</span></br>
               <span class="price-term" data-monthly="Per month" data-annual="Per year">Per year</span>
             </div>
             <div class="price-action">
@@ -1136,7 +1136,7 @@
                 <td class="comparison-plan comparison-plan--enterprise"></td>
               </tr>
               <tr>
-                <td class="comparison-feature">Remove “Powered by Invoice Ninja”</td>
+                <td class="comparison-feature">Remove “Powered by Facture.mu”</td>
                 <td class="comparison-plan comparison-plan--free"><span class="comparison-icon-cross">✕</span></td>
                 <td class="comparison-plan comparison-plan--pro"><span class="comparison-icon-check">✓</span></td>
                 <td class="comparison-plan comparison-plan--enterprise"><span class="comparison-icon-check is-green">✓</span></td>
