--- a/tarifs.html
+++ b/tarifs.html
@@ -417,7 +417,7 @@
     }
 
     .toggle-switch input:checked + .toggle-slider{
-      background: #0ea5e9;
+      background: #0a1220;
     }
 
     .toggle-switch input:checked + .toggle-slider::before{
