--- a/tarifs.html
+++ b/tarifs.html
@@ -638,7 +638,7 @@
     .price-link{
       margin-top: 16px;
       font-size: 12px;
-      color: #0ea5e9;
+      color: #6c7180;
       text-decoration: none;
       display: inline-flex;
       align-items: center;
